@@ -15,11 +15,11 @@ if (PHP_HASH != "no") {
 	AC_DEFINE('HAVE_HASH_EXT', 1);
 	EXTENSION("hash", "hash.c hash_md.c hash_sha.c hash_ripemd.c hash_haval.c "
 		+ "hash_tiger.c hash_gost.c hash_snefru.c hash_whirlpool.c "
-		+ "hash_adler32.c hash_crc32.c hash_salsa.c hash_joaat.c hash_fnv.c");
+		+ "hash_adler32.c hash_crc32.c hash_joaat.c hash_fnv.c");
 
 		PHP_INSTALL_HEADERS("ext/hash/", "php_hash.h php_hash_md.h php_hash_sha.h php_hash_ripemd.h " +
 		"php_hash_haval.h php_hash_tiger.h php_hash_gost.h php_hash_snefru.h " + 
-		"php_hash_whirlpool.h php_hash_adler32.h php_hash_crc32.h php_hash_salsa.h " +
+		"php_hash_whirlpool.h php_hash_adler32.h php_hash_crc32.h " +
 		"php_hash_types.h");
 }
 
