@@ -18,96 +18,92 @@ var_dump(hash_algos());
 ===Done===
 --EXPECTF--
 *** Testing hash_algos() : basic functionality ***
-array(45) {
-  [0]=>
+array(43) {
+  [%d]=>
   string(3) "md2"
-  [1]=>
+  [%d]=>
   string(3) "md4"
-  [2]=>
+  [%d]=>
   string(3) "md5"
-  [3]=>
+  [%d]=>
   string(4) "sha1"
-  [4]=>
+  [%d]=>
   string(6) "sha224"
-  [5]=>
+  [%d]=>
   string(6) "sha256"
-  [6]=>
+  [%d]=>
   string(6) "sha384"
-  [7]=>
+  [%d]=>
   string(6) "sha512"
-  [8]=>
+  [%d]=>
   string(9) "ripemd128"
-  [9]=>
+  [%d]=>
   string(9) "ripemd160"
-  [10]=>
+  [%d]=>
   string(9) "ripemd256"
-  [11]=>
+  [%d]=>
   string(9) "ripemd320"
-  [12]=>
+  [%d]=>
   string(9) "whirlpool"
-  [13]=>
+  [%d]=>
   string(10) "tiger128,3"
-  [14]=>
+  [%d]=>
   string(10) "tiger160,3"
-  [15]=>
+  [%d]=>
   string(10) "tiger192,3"
-  [16]=>
+  [%d]=>
   string(10) "tiger128,4"
-  [17]=>
+  [%d]=>
   string(10) "tiger160,4"
-  [18]=>
+  [%d]=>
   string(10) "tiger192,4"
-  [19]=>
+  [%d]=>
   string(6) "snefru"
-  [20]=>
+  [%d]=>
   string(9) "snefru256"
-  [21]=>
+  [%d]=>
   string(4) "gost"
-  [22]=>
+  [%d]=>
   string(7) "adler32"
-  [23]=>
+  [%d]=>
   string(5) "crc32"
-  [24]=>
+  [%d]=>
   string(6) "crc32b"
-  [25]=>
-  string(7) "salsa10"
-  [26]=>
-  string(7) "salsa20"
-  [27]=>
+  [%d]=>
   string(6) "fnv132"
-  [28]=>
+  [%d]=>
   string(6) "fnv164"
-  [29]=>
+  [%d]=>
   string(5) "joaat"
-  [30]=>
+  [%d]=>
   string(10) "haval128,3"
-  [31]=>
+  [%d]=>
   string(10) "haval160,3"
-  [32]=>
+  [%d]=>
   string(10) "haval192,3"
-  [33]=>
+  [%d]=>
   string(10) "haval224,3"
-  [34]=>
+  [%d]=>
   string(10) "haval256,3"
-  [35]=>
+  [%d]=>
   string(10) "haval128,4"
-  [36]=>
+  [%d]=>
   string(10) "haval160,4"
-  [37]=>
+  [%d]=>
   string(10) "haval192,4"
-  [38]=>
+  [%d]=>
   string(10) "haval224,4"
-  [39]=>
+  [%d]=>
   string(10) "haval256,4"
-  [40]=>
+  [%d]=>
   string(10) "haval128,5"
-  [41]=>
+  [%d]=>
   string(10) "haval160,5"
-  [42]=>
+  [%d]=>
   string(10) "haval192,5"
-  [43]=>
+  [%d]=>
   string(10) "haval224,5"
-  [44]=>
+  [%d]=>
   string(10) "haval256,5"
 }
 ===Done===
