@@ -34,6 +34,7 @@ PHP                                                                        NEWS
 
 - hash
   . Fixed bug #60221 (Tiger hash output byte order) (Mike)
+  . Removed Salsa10/Salsa20, which are actually stream ciphers (Mike)
 
 - pgsql
   . Added pg_escape_literal() and pg_escape_identifier() (Yasuo)
